package com.aaron.justlike.home.model;

public class MainModel implements IMainModel {
}
