package com.aaron.justlike.main;

/**
 * @author Aaron aaronzheng9603@gmail.com
 */
interface IMainCommunicable {

    void onDelete(String path, boolean isListEmpty);
}
